--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 SERVER_PORT = 8000
 DATABASE_URL= "mysql://USER:PASSWORD@HOST:PORT/DATABASE"
-JWT_SECRET=
+JWT_SECRET="your_jwt_secret"
+CLOUDINARY_CLOUD_NAME="your_cloud_name"
+CLOUDINARY_API_KEY="your_api_key"
+CLOUDINARY_API_SECRET="your_api_secret"
